syntax = "proto3";
package noble.router;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/strangelove-ventures/noble-router/x/router/types";

// mints are stored so incoming IBC forward messages can check if a mint has been processed
// @param attestation // TODO
// @param amount
// @param destinationDomain
// @param mintRecipient
message Mint {
  string source_domain_sender = 1;
  uint64 nonce = 2;
  string attestation = 3;
  cosmos.base.v1beta1.Coin amount = 4;
  string destination_domain = 5;
  string mint_recipient = 6;
}
